--- a/exercicios/ex22/fundo006.html
+++ b/exercicios/ex22/fundo006.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, inicial-scale=1.0">
-    <title>Document</title>
+    <title>fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
+            /*
             background-color: black;
             background-image: url("imagens/wallpaper002.jpg");
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+         
+        shorthand - tag - background
+        color > image > position > repeat > size, attachment
+        */
+        background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+        background-size: cover;
         }
+        
         main{
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +36,9 @@
 <body>
     <main>
         <h1>Teste de Imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore inventore illum modi, totam explicabo autem! Molestias laborum reiciendis, aperiam perferendis distinctio ipsa ea ex! Aperiam, incidunt! Corrupti quisquam dolorem quidem?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore inventore illum modi, totam explicabo autem! Molestias laborum reiciendis, aperiam perferendis distinctio ipsa ea ex! Aperiam, incidunt! Corrupti quisquam dolorem quidem? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum consequuntur iure saepe deleniti suscipit alias, laboriosam fuga voluptates ipsam sunt ea harum architecto quae, doloremque eos! Nam tenetur cum adipisci.Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore inventore illum modi, totam explicabo autem! Molestias laborum reiciendis, aperiam perferendis distinctio ipsa ea ex! Aperiam, incidunt! Corrupti quisquam dolorem quidem? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum consequuntur iure saepe deleniti suscipit alias, laboriosam fuga voluptates ipsam sunt ea harum architecto quae, doloremque eos! Nam tenetur cum adipisci.Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore inventore illum modi, totam explicabo autem! Molestias laborum reiciendis, aperiam perferendis distinctio ipsa ea ex! Aperiam, incidunt! Corrupti quisquam dolorem quidem? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum consequuntur iure saepe deleniti suscipit alias, laboriosam fuga voluptates ipsam sunt ea harum architecto quae, doloremque eos! Nam tenetur cum adipisci.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore inventore illum modi, totam explicabo autem! Molestias laborum reiciendis, aperiam perferendis distinctio ipsa ea ex! Aperiam, incidunt! Corrupti quisquam dolorem quidem? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum consequuntur iure saepe deleniti suscipit alias, laboriosam fuga voluptates ipsam sunt ea harum architecto quae, doloremque eos! Nam tenetur cum adipisci.Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore inventore illum modi, totam explicabo autem! Molestias laborum reiciendis, aperiam perferendis distinctio ipsa ea ex! Aperiam, incidunt! Corrupti quisquam dolorem quidem? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum consequuntur iure saepe deleniti suscipit alias, laboriosam fuga voluptates ipsam sunt ea harum architecto quae, doloremque eos! Nam tenetur cum adipisci.Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore inventore illum modi, totam explicabo autem! Molestias laborum reiciendis, aperiam perferendis distinctio ipsa ea ex! Aperiam, incidunt! Corrupti quisquam dolorem quidem? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum consequuntur iure saepe deleniti suscipit alias, laboriosam fuga voluptates ipsam sunt ea harum architecto quae, doloremque eos! Nam tenetur cum adipisci.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore inventore illum modi, totam explicabo autem! Molestias laborum reiciendis, aperiam perferendis distinctio ipsa ea ex! Aperiam, incidunt! Corrupti quisquam dolorem quidem? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum consequuntur iure saepe deleniti suscipit alias, laboriosam fuga voluptates ipsam sunt ea harum architecto quae, doloremque eos! Nam tenetur cum adipisci.Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore inventore illum modi, totam explicabo autem! Molestias laborum reiciendis, aperiam perferendis distinctio ipsa ea ex! Aperiam, incidunt! Corrupti quisquam dolorem quidem? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum consequuntur iure saepe deleniti suscipit alias, laboriosam fuga voluptates ipsam sunt ea harum architecto quae, doloremque eos! Nam tenetur cum adipisci.Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore inventore illum modi, totam explicabo autem! Molestias laborum reiciendis, aperiam perferendis distinctio ipsa ea ex! Aperiam, incidunt! Corrupti quisquam dolorem quidem? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum consequuntur iure saepe deleniti suscipit alias, laboriosam fuga voluptates ipsam sunt ea harum architecto quae, doloremque eos! Nam tenetur cum adipisci.</p>
     </main>
 </body>
 </html>
