--- a/desafios/projeto-cordel-cap20/index.html
+++ b/desafios/projeto-cordel-cap20/index.html
@@ -31,7 +31,7 @@
             </p>
         </section>
 
-        <section class="imagem">
+        <section class="imagem" id="img01">
             <p>
                 Não é mais como era antes
                 <br>
@@ -83,7 +83,7 @@
             </p>
         </section>
 
-        <section class="imagem">
+        <section class="imagem" id="img02">
             <p>
                 Tenho saudade das cartas
                 <br>
@@ -117,7 +117,7 @@
                 <br>
                 Da tecnologia do agora.
                 <br>
-
+                <br>
                 Felizmente, pra orar
                 <br>
                 Não precisa de internet
