adicionei os ex 13 - tabela 1 e 2
Tabelas do desafio 13 e correção da anotação da tabela 02 do ex 23

--- a/exercicios/ex023/tabela02.html
+++ b/exercicios/ex023/tabela02.html
@@ -51,7 +51,7 @@
     <!--
         ANATOMIA PARA TABELAS GRANDES
         TABLE
-            THREAD
+            THEAD
                 TR, TD, TH
             TBODY
                 TR, TD, TH
