--- a/exercicios/ex024/iframe1.html
+++ b/exercicios/ex024/iframe1.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <h1>Testando o uso de um iframe</h1>
-    <p>Acessando o site <iframe src="https://www.cursoemvideo.com/" frameborder="0"></iframe> para aprender a programar</p>
+    <p>Acessando o site <iframe src="https://www.cursoemvideo.com/" frameborder="0" width="700" height="500"></iframe> para aprender a programar</p>
+    <p>
+        Repositório do prof guanabara 
+
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0" width="700" height="500"></iframe>
+        no <a href="https://gustavoguanabara.github.io" target="_blank">github</a>
+    </p>
 </body>
 </html>
