--- a/exercicios/ex024/iframe3.html
+++ b/exercicios/ex024/iframe3.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ipsam optio adipisci. Odit pariatur iusto quaerat. Alias inventore facere nobis omnis fugit aut doloribus tempora saepe at, ab aperiam quam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea, voluptatum, assumenda sunt, consequatur perferendis nobis possimus eum distinctio cupiditate placeat deserunt cum odio laborum rerum. Ipsam dolore deleniti labore voluptatem!</p>
 
-    <iframe src="" id="tela" name="frame">
+    <iframe src="" id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, nulla dolorum! Id provident reprehenderit a ducimus pariatur nesciunt sint iure iusto, corporis ratione necessitatibus unde est velit dolor, vel ullam.</p> <img src='imgs/chapada-do-gato.png'></img>">
         <p>Seu navegador não é compatível</p>
     </iframe>
 
